--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <h2><%= blog.title %></h2>
     <h3><%=blog.created%></h3>
     <img src="<%= blog.image %>" alt="">
-    <p><%= blog.body%></p>
+    <a href="/blogs/<%= blog._id%>">Read More</a>
   </div>
 
 <% }) %>
